sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value getNombreValeur
  for(i<- 1 to getNombreValeur()) {
               ^AlgBubbleSort1:4: error: value getNombreValeur is not a member of Int
    for(k<- 0 getNombreValeur()-(i+1)){
              ^AlgBubbleSort1:4: error: value - is not a member of Unit
    for(k<- 0 getNombreValeur()-(i+1)){
                               ^