sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for(i<- 1 to getNombreValeur()) {
    for(k<- 0 getNombreValeur()-(i+1)){
      if (plusPetit(k+1,k)) (echange(k+1,k))
    }
  }
}